# millet

./: CHANGELOG.md  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: spike-diarization-cluster-bleed.md
meet/: __init__.py  cli.py  frontmatter.py  gui.py  label.py  pdf.py  summarize.py  sync.py  transcribe.py  voiceprint.py
meet/prompts/: summarize_format_system.md  summarize_system.md
millet/: __init__.py  label.py  sync.py  transcribe.py
millet/cli/: label.py  sync.py  transcribe.py
tests/: test_cli.py  test_frontmatter.py  test_gui.py  test_ingest.py  test_label.py  test_summarize.py  test_sync_team.py  test_transcribe.py
