[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetscribe-offline"
version = "0.8.3"
description = "Fully local meeting transcription with speaker diarization, AI summaries, and PDF output. Builds on meetscribe-record for capture."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "pretyflaco"}]
keywords = [
    "meeting",
    "transcription",
    "whisper",
    "whisperx",
    "diarization",
    "speaker-diarization",
    "pyannote",
    "ollama",
    "local-ai",
    "audio",
    "recording",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]
dependencies = [
    "meetscribe-record>=0.1.0",
    "whisperx>=3.8",
    "click>=8.0",
    "reportlab>=4.0",
    "requests>=2.28",
    # certifi is already a transitive dependency via requests +
    # huggingface_hub; listed explicitly because meet/__init__.py
    # imports it directly for the F3 SSL_CERT_FILE injection (see
    # the M8 retrospective).
    "certifi",
]

# `meet` console script is provided by meetscribe-record; offline-package
# extends it with the heavier subcommands via the `meet.subcommands`
# entry-point group below.

[project.entry-points."meet.subcommands"]
transcribe = "meet.cli:transcribe"
run = "meet.cli:run"
download = "meet.cli:download"
translate = "meet.cli:translate"
label = "meet.cli:label"
enroll = "meet.cli:enroll"
sync = "meet.cli:sync"
gui = "meet.cli:gui"
ingest = "meet.cli:ingest"

[project.urls]
Homepage = "https://github.com/pretyflaco/meetscribe"
Repository = "https://github.com/pretyflaco/meetscribe"
Issues = "https://github.com/pretyflaco/meetscribe/issues"

[tool.setuptools.package-data]
meet = ["prompts/*.md"]

[project.optional-dependencies]
rtl = ["arabic-reshaper>=3.0", "python-bidi>=0.4"]
mlx = ["mlx-whisper>=0.4.3"]
tee = ["tinfoil>=0.12"]
dev = ["ruff", "pytest"]
